# routes/api.php
@@ -45,9 +45,9 @@ Route::middleware('auth:api',)->group(function () {
 });
 
 // Trip management routes
-Route::middleware('auth:api')->group(function () {
-    Route::apiResource('trips', TripController::class);
-    Route::get('search', [TripController::class, 'search']);
-});
-
-Route::apiResource('trips', TripController::class)->middleware('auth:api');
+// Route::middleware('auth:api')->group(function () {
+Route::get('trips', [TripController::class, 'index']);
+Route::post('trips', [TripController::class, 'create']);
+Route::get('trips/{id}', [TripController::class, 'show']);
+Route::put('trips/{id}', [TripController::class, 'update']);
+Route::delete('trips/{id}', [TripController::class, 'destroy']);
