# storage/api-docs/api-docs.json
@@ -5,20 +5,14 @@
         "description": "This is the API documentation for the carpooling application.",
         "version": "1.0.0"
     },
-    "servers": [
-        {
-            "url": "http://my-default-host.com",
-            "description": "API Server"
-        }
-    ],
     "paths": {
-        "/api/auth/register": {
+        "/api/register": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Register a new user",
-                "operationId": "d764dd091cc4494ae0baf360b03319f3",
+                "operationId": "8a56853624e025573120a09a4c75d468",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -83,13 +77,13 @@
                 }
             }
         },
-        "/api/auth/login": {
+        "/api/login": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Login a user",
-                "operationId": "8dcb70df1020986038d098cc08d05dae",
+                "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -114,11 +108,14 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "User logged in successfully",
+                        "description": "Login successful",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
+                                        "user": {
+                                            "$ref": "#/components/schemas/User"
+                                        },
                                         "token": {
                                             "type": "string"
                                         }
@@ -130,39 +127,20 @@
                     },
                     "401": {
                         "description": "Invalid credentials"
-                    },
-                    "500": {
-                        "description": "Could not create token"
                     }
                 }
             }
         },
-        "/api/auth/logout": {
+        "/api/logout": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Logout a user",
-                "operationId": "69281b12abb272c76871f19cb17ca563",
+                "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
                 "responses": {
                     "200": {
-                        "description": "Successfully logged out",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Successfully logged out"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Failed to logout, please try again."
+                        "description": "Logout successful"
                     }
                 },
                 "security": [
@@ -179,6 +157,36 @@
                 ],
                 "summary": "Get all trips",
                 "operationId": "692b0f6b729af25639ef76046f8fba1f",
+                "parameters": [
+                    {
+                        "name": "start",
+                        "in": "query",
+                        "description": "Starting point of the trip",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "end",
+                        "in": "query",
+                        "description": "Ending point of the trip",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "date",
+                        "in": "query",
+                        "description": "Starting date of the trip",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "format": "date"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful operation",
@@ -360,60 +368,6 @@
                         "bearerAuth": []
                     }
                 ]
-            }
-        },
-        "/api/trips/search": {
-            "get": {
-                "tags": [
-                    "Trips"
-                ],
-                "summary": "Search trips",
-                "operationId": "eda38fb0b205a9c424f7ab7f34f35b6e",
-                "parameters": [
-                    {
-                        "name": "start",
-                        "in": "query",
-                        "description": "Starting point",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "end",
-                        "in": "query",
-                        "description": "Ending point",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "date",
-                        "in": "query",
-                        "description": "Starting date",
-                        "required": false,
-                        "schema": {
-                            "type": "string",
-                            "format": "date"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/Trip"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
             }
         },
         "/api/users": {
@@ -680,6 +634,63 @@
     },
     "components": {
         "schemas": {
+            "User": {
+                "title": "User",
+                "description": "User model",
+                "required": [
+                    "lastname",
+                    "firstname",
+                    "email",
+                    "password"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "ID of the user",
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "lastname": {
+                        "description": "Last name of the user",
+                        "type": "string",
+                        "example": "Doe"
+                    },
+                    "firstname": {
+                        "description": "First name of the user",
+                        "type": "string",
+                        "example": "John"
+                    },
+                    "email": {
+                        "description": "Email address of the user",
+                        "type": "string",
+                        "format": "email",
+                        "example": "john.doe@example.com"
+                    },
+                    "password": {
+                        "description": "Password of the user",
+                        "type": "string",
+                        "format": "password",
+                        "example": "password123"
+                    },
+                    "avatar": {
+                        "description": "Avatar image URL of the user",
+                        "type": "string",
+                        "example": "avatars/johndoe.png"
+                    },
+                    "created_at": {
+                        "description": "Creation timestamp",
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-07-01T12:00:00Z"
+                    },
+                    "updated_at": {
+                        "description": "Last update timestamp",
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-07-15T12:00:00Z"
+                    }
+                },
+                "type": "object"
+            },
             "Trip": {
                 "title": "Trip",
                 "required": [
@@ -722,39 +733,13 @@
                     }
                 },
                 "type": "object"
-            },
-            "User": {
-                "required": [
-                    "id",
-                    "lastname",
-                    "firstname",
-                    "email"
-                ],
-                "properties": {
-                    "id": {
-                        "description": "ID of the user",
-                        "type": "integer"
-                    },
-                    "lastname": {
-                        "description": "Last name of the user",
-                        "type": "string"
-                    },
-                    "firstname": {
-                        "description": "First name of the user",
-                        "type": "string"
-                    },
-                    "email": {
-                        "description": "Email of the user",
-                        "type": "string",
-                        "format": "email"
-                    },
-                    "avatar": {
-                        "description": "Avatar URL of the user",
-                        "type": "string",
-                        "nullable": true
-                    }
-                },
-                "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
             }
         }
     },
